Continue work on unit tests
Signed-off-by: Craig Perkins <cwperx@amazon.com>